# api-gateway/internal/routes/education_routes.go
@@ -3,15 +3,23 @@ package routes
 import (
 	client "api-gateway/internal/clients"
 	"api-gateway/internal/handlers"
+	"api-gateway/internal/middleware"
 	"github.com/gin-gonic/gin"
 )
 
 func EducationRoutes(api *gin.RouterGroup, userClient *client.UserClient) {
 	room := api.Group("/room")
 	{
-		room.POST("/create", handlers.CreateRoom)
-		room.PUT("/update", handlers.UpdateRoom)
-		room.DELETE("/delete/:id", handlers.DeleteRoom)
-		room.GET("/get-all", handlers.GetAllRoom)
+		room.POST("/create", middleware.AuthMiddleware([]string{}, userClient), handlers.CreateRoom)
+		room.PUT("/update", middleware.AuthMiddleware([]string{}, userClient), handlers.UpdateRoom)
+		room.DELETE("/delete/:id", middleware.AuthMiddleware([]string{}, userClient), handlers.DeleteRoom)
+		room.GET("/get-all", middleware.AuthMiddleware([]string{}, userClient), handlers.GetAllRoom)
+	}
+	course := api.Group("/course")
+	{
+		course.POST("/create", middleware.AuthMiddleware([]string{}, userClient), handlers.CreateCourse)
+		course.PUT("/update", middleware.AuthMiddleware([]string{}, userClient), handlers.UpdateCourse)
+		course.DELETE("/delete/:id", middleware.AuthMiddleware([]string{}, userClient), handlers.DeleteCourse)
+		course.GET("/get-all", middleware.AuthMiddleware([]string{}, userClient), handlers.GetAllCourse)
 	}
 }
